attempting to connect mlab and heroku

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,20 @@
     <link rel="stylesheet" href="./assets/css/style.css">
   </head>
   <body>
+
     <div id="wrapper">
-      <h1>Slashdot Story Scrapper</h1>
-      <div id="articles"></div>
-      <div id="notes"></div>
+      
+      <header role="banner" class="primary-header">
+          <h1 class="primary-site-header">slashdot story scrapper</h1>
+      </header>
+
+      <main role="main" class="app-content">
+        <div id="articles"></div>
+        <div id="notes"></div>
+      </main>
+
     </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="app.js"></script>
   </body>
