final css changes

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,9 @@
 
       <main role="main" class="app-content">
         <div id="articles"></div>
-        <div id="notes"></div>
+        <aside role="complementary" class="primary-site-aside">
+          <div id="notes"></div>
+        </aside>
       </main>
 
     </div>
